cross browser spacing fixes

--- a/css/reset.css
+++ b/css/reset.css
@@ -20,6 +20,13 @@ time, mark, audio, video, {
     
 }
 
+input {
+  box-sizing: border-box;
+    -ms-box-sizing:content-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
 input[type="checkbox"] {
   -webkit-appearance: checkbox;
 }
@@ -77,7 +84,6 @@ select {
   /*border-radius: 0;*/
   margin: 0;
   color: #444444;
-  -moz-box-sizing: border-box;
   -moz-user-select: none;
   cursor: default;
   display: inline-block;
@@ -89,4 +95,8 @@ select {
   white-space: nowrap !important;
   word-wrap: normal !important;
   background: #ffffff;
+  box-sizing: border-box;
+    -ms-box-sizing:content-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
