--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -10,6 +10,7 @@
   box-shadow: 1px 1px 40px black;
   border: 2px solid #1a1d2a;
   box-sizing: border-box;
+    -ms-box-sizing:content-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
@@ -56,7 +57,11 @@
 }
 
 #time select {
-  width: 44px;
+  width: 49px;
+}
+
+#accuracy select {
+  width: 120px;
 }
 
 #sign_up_container input[type=text] {
@@ -70,9 +75,6 @@
   /*border: 1px solid #d1d1d1;*/
   border: 2px solid #1a1d2a;
   /*box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15) inset;*/
-  box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
 }
 
 #sign_up_container input[type=text]:focus {
@@ -123,6 +125,7 @@
     border: none;
     background: #e7ebee;
     float: right;
+    padding: 1px;
 }
 
 #next:active {
@@ -438,13 +441,13 @@
 
 #help_link {
     font-family: 'later_on';
-    font-size: 1em;
-    letter-spacing: 2px;
+    font-size: 16px;   /* FOR SPACING ISSUES*/
+    letter-spacing: 1px;
     text-align: left;
     font-weight: bold;
     cursor: pointer;
     text-decoration: underline;
-    width: 209px;
+    /*width: 209px;*/
     display: inline-block;
 }
 
